[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/nodes/ResultFrameView.gd" type="Script" id=1]

[node name="ResultFrameView" type="TextureRect"]
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 1
script = ExtResource( 1 )

[node name="SubtileHighlight" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.313726 )

[node name="SubtileSelection" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.54902 )

[connection signal="gui_input" from="." to="." method="_on_ResultTextureViewRect_gui_input"]
